--- a/package.json
+++ b/package.json
@@ -9,13 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
+    "@aws-sdk/client-s3": "^3.350.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "mime": "^3.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.3",
+    "multiparty": "^4.2.3",
     "next": "13.4.4",
-    "postcss": "8.4.24",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.9.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.5.2",
+    "sortablejs": "^1.15.0",
+    "sweetalert2": "^11.7.12",
+    "sweetalert2-react-content": "^5.0.7"
+  },
+  "devDependencies": {
+    "@types/sortablejs": "^1.15.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
