--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
     "react-icons": "^4.9.0",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.8",
-    "react-sweetalert2": "^0.5.2",
-    "sortablejs": "^1.15.0",
-    "sweetalert2": "^11.4.8",
-    "sweetalert2-react-content": "^5.0.7"
+    "sortablejs": "^1.15.0"
   },
   "devDependencies": {
     "@types/sortablejs": "^1.15.1",
