--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GOOGLE_SECRET = "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"
 MONGODB_URI = "mongodb+srv://mihaialex26:KGv0VlEbYgbjK5Pm@cluster0.59rqcsx.mongodb.net/"
 S3_ACCESS_KEY = "AKIAZHPXKWMQ6MIURGMV"
 S3_SECRET_ACCESS_KEY = "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"
+NEXTAUTH_SECRET="akjsdkahsjkbzbkhzxkjh"
