--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.347.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -22,6 +23,7 @@
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-sortablejs": "^6.1.4",
